migrating from java 8 to java 17